# darwin-galactic

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/common/: Constants.h  Point.h
src/environment/: Asteroid.cpp  Asteroid.h  AsteroidManager.cpp  AsteroidManager.h  Environment.cpp  Environment.h  LaserShot.cpp  LaserShot.h
src/logging/: Log.cpp  Log.h  TimeLog.cpp  TimeLog.h
src/ship/: Ship.cpp  Ship.h
src/ship/equipment/: Laser.cpp  Laser.h  Thruster.cpp  Thruster.h
src/utility/: IntegerMath.cpp  IntegerMath.h
test/: CMakeLists.txt  main.cpp
test/lib/googletest-master/googlemock/docs/: ForDummies.md
test/lib/googletest-master/googlemock/docs/v1_5/: ForDummies.md
test/lib/googletest-master/googlemock/docs/v1_6/: ForDummies.md
test/lib/googletest-master/googlemock/docs/v1_7/: ForDummies.md
test/lib/googletest-master/googlemock/scripts/: upload.py
test/lib/googletest-master/googlemock/src/: gmock_main.cc
test/lib/googletest-master/googletest/docs/: FAQ.md  V1_5_FAQ.md  V1_5_Primer.md  V1_6_FAQ.md  V1_6_Primer.md  V1_7_FAQ.md  V1_7_Primer.md
test/lib/googletest-master/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest.cc  gtest_main.cc
test/lib/googletest-master/googletest/test/: gtest_main_unittest.cc  gtest_output_test_.cc  gtest_stress_test.cc  gtest_test_utils.py
test/tests/common/: PointTest.cpp
test/tests/environment/: AsteroidTest.cpp  EnvironmentTest.cpp  LaserShotTest.cpp
test/tests/ship/: ShipTest.cpp
test/tests/ship/equipment/: LaserTest.cpp
test/tests/utility/: IntegerMathTest.cpp
(+8 files in other folders)
